Improve and document .nq-card and co.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 padding-bottom: 4rem !important;
             }
 
-            .nq-card {
+            #cards > .nq-card {
                 margin: 10rem auto;
             }
 
@@ -128,6 +128,7 @@
                     <li><a class="nq-link" href="#colors">Colors</a></li>
                     <li><a class="nq-link" href="#primary-buttons">Primary Buttons</a></li>
                     <li><a class="nq-link" href="#small-buttons">Small Buttons</a></li>
+                    <li><a class="nq-link" href="#card-component">Card Component</a></li>
                 </ul>
             </div>
 
@@ -277,6 +278,55 @@
 &lt;button class="<b>nq-button-s green</b>">Green button&lt;/button>
 &lt;button class="<b>nq-button-s orange</b>">Orange button&lt;/button>
 &lt;button class="<b>nq-button-s red</b>">Red button&lt;/button></div>
+                </div><!-- .nq-card -->
+
+                <div class="nq-card" id="card-component">
+                    <div class="nq-card-header">
+                        <h1 class="nq-h1">Card Component</h1>
+                    </div>
+                    <div class="nq-card-body">
+                        <div class="nq-card">
+                            <div class="nq-card-header">
+                                <h1 class="nq-h1">Card Header</h1>
+                            </div>
+                            <div class="nq-card-body">
+                                <p class="nq-text">Card Body</p>
+                            </div>
+                            <div class="nq-card-footer">
+                                <a class="nq-link" href="javascript:void(0)">Card Footer</a>
+                            </div>
+                        </div>
+
+                        <div class="nq-card">
+                            <div class="nq-card-header">
+                                <h2 class="nq-h2">Card Header</h2>
+                            </div>
+                            <div class="nq-card-body">
+                                <p class="nq-text">Card Body</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="code">&lt;div class="<b>nq-card</b>">
+    &lt;div class="<b>nq-card-header</b>">
+        &lt;h1 class="<b>nq-h1</b>">Card Header&lt;/h1>
+    &lt;/div>
+    &lt;div class="<b>nq-card-body</b>">
+        &lt;p>Card Body&lt;/p>
+    &lt;/div>
+    &lt;div class="<b>nq-card-footer</b>">
+        &lt;a>Card Footer&lt;/a>
+    &lt;/div>
+&lt;/div>
+
+&lt;div class="<b>nq-card</b>">
+    &lt;div class="<b>nq-card-header</b>">
+        &lt;h2 class="<b>nq-h2</b>">Card Header&lt;/h2>
+    &lt;/div>
+    &lt;div class="<b>nq-card-body</b>">
+        &lt;p>Card Body&lt;/p>
+    &lt;/div>
+&lt;/div></div>
                 </div><!-- .nq-card -->
             </div><!-- #cards -->
 
