Add first set of icons, without documentation

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                 margin-top: 1rem;
             }
 
+            .icons {
+                font-size: 5rem;
+            }
+
+            .icons .nq-icon {
+                margin: 1rem;
+            }
+
             @media (max-width: 450px) {
                 #contents,
                 #installation,
@@ -129,6 +137,7 @@
                     <li><a class="nq-link" href="#primary-buttons">Primary Buttons</a></li>
                     <li><a class="nq-link" href="#small-buttons">Small Buttons</a></li>
                     <li><a class="nq-link" href="#card-component">Card Component</a></li>
+                    <li><a class="nq-link" href="#icons">Icons</a></li>
                 </ul>
             </div>
 
@@ -328,6 +337,45 @@
     &lt;/div>
 &lt;/div></div>
                 </div><!-- .nq-card -->
+
+                <div class="nq-card" id="icons">
+                    <div class="nq-card-header">
+                        <h1 class="nq-h1">Icons</h1>
+                    </div>
+                    <div class="nq-card-body icons">
+                        <i class="nq-icon nimiq-logo"></i>
+                        <i class="nq-icon add-circle"></i>
+                        <i class="nq-icon walletfile"></i>
+                        <i class="nq-icon walletfile-locked"></i>
+                        <i class="nq-icon walletfile-locked-green"></i>
+                        <i class="nq-icon walletfile-unlocked"></i>
+                        <i class="nq-icon arrow-left"></i>
+                        <i class="nq-icon arrow-down"></i>
+                        <i class="nq-icon arrow-right"></i>
+                        <i class="nq-icon arrow-up"></i>
+                        <i class="nq-icon arrow-right-light-blue"></i>
+                        <i class="nq-icon chevron-left"></i>
+                        <i class="nq-icon chevron-right"></i>
+                        <i class="nq-icon arrow-long-right"></i>
+                        <i class="nq-icon edit"></i>
+                        <i class="nq-icon cancel-circle"></i>
+                        <i class="nq-icon privacy-agent"></i>
+                        <i class="nq-icon warning-sign"></i>
+                        <i class="nq-icon trumpet"></i>
+                        <i class="nq-icon keyguard"></i>
+                        <i class="nq-icon ledger"></i>
+                    </div>
+
+                    <div class="nq-card-body nq-bg-blue icons">
+                        <i class="nq-icon eye"></i>
+                        <i class="nq-icon eye-off"></i>
+                        <i class="nq-icon cancel-circle-white"></i>
+                        <i class="nq-icon checkmark-circle"></i>
+                        <i class="nq-icon lock-white"></i>
+                    </div>
+
+                    <div class="code"></div>
+                </div>
             </div><!-- #cards -->
 
             <div id="footer">
