Handle icons separately

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Nimiq Style Overview</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,600,700">
         <link rel="stylesheet" href="./src/main.css">
+        <link rel="stylesheet" href="./src/icons.css">
         <style>
             .content {
                 width: 100%;
@@ -342,6 +343,10 @@
                     <div class="nq-card-header">
                         <h1 class="nq-h1">Icons</h1>
                     </div>
+                    <div class="nq-card-body">
+                        <p class="nq-text">To use icons, you have to include a second CSS file:</p>
+                    </div>
+                    <div class="code">@import 'node_modules/@nimiq/style/nimiq-style-icons.min.css';</div>
                     <div class="nq-card-body icons">
                         <i class="nq-icon nimiq-logo"></i>
                         <i class="nq-icon add-circle"></i>
