--- a/index.html
+++ b/index.html
@@ -249,11 +249,13 @@
                         <button class="nq-button">Min width</button>
                         <button class="nq-button">Regular button</button>
                         <button class="nq-button">Button with lots of text</button>
+                        <button class="nq-button" disabled>Disabled button</button>
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button</b>">Min width&lt;/button>
 &lt;button class="<b>nq-button</b>">Regular button&lt;/button>
-&lt;button class="<b>nq-button</b>">Button with lots of text&lt;/button></div>
+&lt;button class="<b>nq-button</b>">Button with lots of text&lt;/button>
+&lt;button class="<b>nq-button</b>" <b>disabled</b>>Disabled button&lt;/button></div>
 
                     <div class="nq-card-body primary-buttons">
                         <button class="nq-button light-blue">Light-blue button</button>
@@ -273,7 +275,8 @@
                         <h1 class="nq-h1">Small Buttons</h1>
                     </div>
                     <div class="nq-card-body small-buttons">
-                        <button class="nq-button-s">Small button</button><br>
+                        <button class="nq-button-s">Small button</button>
+                        <button class="nq-button-s" disabled>Disabled small button</button><br>
                         <br>
                         <br>
                         <button class="nq-button-s light-blue">Light-blue button</button>
@@ -283,6 +286,7 @@
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button-s</b>">Small button&lt;/button>
+&lt;button class="<b>nq-button-s</b>" <b>disabled</b>>Disabled small button&lt;/button>
 
 &lt;button class="<b>nq-button-s light-blue</b>">Light-blue button&lt;/button>
 &lt;button class="<b>nq-button-s green</b>">Green button&lt;/button>
