Add inverse primary button styles

--- a/index.html
+++ b/index.html
@@ -250,12 +250,14 @@
                         <button class="nq-button">Regular button</button>
                         <button class="nq-button">Button with lots of text</button>
                         <button class="nq-button" disabled>Disabled button</button>
+                        <button class="nq-button inverse">Inverse button</button>
                     </div>
 
                     <div class="code">&lt;button class="<b>nq-button</b>">Min width&lt;/button>
 &lt;button class="<b>nq-button</b>">Regular button&lt;/button>
 &lt;button class="<b>nq-button</b>">Button with lots of text&lt;/button>
-&lt;button class="<b>nq-button</b>" <b>disabled</b>>Disabled button&lt;/button></div>
+&lt;button class="<b>nq-button</b>" <b>disabled</b>>Disabled button&lt;/button>
+&lt;button class="<b>nq-button inverse</b>">Inverse button&lt;/button></div>
 
                     <div class="nq-card-body primary-buttons">
                         <button class="nq-button light-blue">Light-blue button</button>
