--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 font-size: 1.75rem;
                 line-height: 3rem;
                 font-family: monospace;
-                border: 1px solid rgba(31, 35, 72, 0.07);
+                border: 1px solid var(--nimiq-card-border-color);
                 border-radius: 0.5rem;
                 padding: 3rem 4rem;
                 background: ivory;
