Add .nq-style class to automatically apply typography styles to contents

--- a/demo.html
+++ b/demo.html
@@ -26,6 +26,10 @@
                 margin-bottom: 5rem;
             }
 
+            .table-of-contents {
+                font-size: 2.25rem;
+            }
+
             #contents,
             #installation,
             #cards,
@@ -175,6 +179,11 @@
                         <p class="nq-text-s">This is small text.</p>
 
                         <span class="nq-label">Label</span>
+
+                        <div class="nq-style">
+                            <h2>Tip:</h2>
+                            <p>You can also add the <strong>nq-style</strong> class to a container element to automatically apply heading, paragraph, link and list styles to its contents.</p>
+                        </div>
                     </div>
 
                     <div class="code">&lt;h1 class="<b>nq-h1</b>">Heading H1&lt;/h1>
@@ -183,7 +192,8 @@
 &lt;p class="<b>nq-text</b>">Contrary...&lt;/p>
 &lt;a class="<b>nq-link</b>">I am a link&lt;/a>
 &lt;p class="<b>nq-text-s</b>">This is small text.&lt;/p>
-&lt;span class="<b>nq-label</b>">Label&lt;/span></div>
+&lt;span class="<b>nq-label</b>">Label&lt;/span>
+&lt;div class="<b>nq-style</b>">...&lt;/div></div>
                 </div>
 
                 <div class="nq-card" id="colors">
