Add LoginFile colors
Purple, Pink, Light Green, Brown

--- a/demo.html
+++ b/demo.html
@@ -220,6 +220,10 @@
                         <p class="nq-green">Nimiq Green</p>
                         <p class="nq-orange">Nimiq Orange</p>
                         <p class="nq-red">Nimiq Red</p>
+                        <p class="nq-purple">Nimiq Purple</p>
+                        <p class="nq-pink">Nimiq Pink</p>
+                        <p class="nq-light-green">Nimiq Light Green</p>
+                        <p class="nq-brown">Nimiq Brown</p>
                     </div>
 
                     <div class="code">&lt;p class="<b>nq-blue</b>">Nimiq Blue&lt;/p>
@@ -227,7 +231,11 @@
 &lt;p class="<b>nq-gold</b>">Nimiq Gold&lt;/p>
 &lt;p class="<b>nq-green</b>">Nimiq Green&lt;/p>
 &lt;p class="<b>nq-orange</b>">Nimiq Orange&lt;/p>
-&lt;p class="<b>nq-red</b>">Nimiq Red&lt;/p></div>
+&lt;p class="<b>nq-red</b>">Nimiq Red&lt;/p>
+&lt;p class="<b>nq-purple</b>">Nimiq Purple&lt;/p>
+&lt;p class="<b>nq-pink</b>">Nimiq Pink&lt;/p>
+&lt;p class="<b>nq-light-green</b>">Nimiq Light Green&lt;/p>
+&lt;p class="<b>nq-brown</b>">Nimiq Brown&lt;/p></div>
 
                     <div class="nq-card-body background-colors">
                         <div class="color-swatch nq-blue-bg">
@@ -253,6 +261,22 @@
                         <div class="color-swatch nq-red-bg">
                             Text on colored background is white.
                         </div>
+
+                        <div class="color-swatch nq-purple-bg">
+                            Text on colored background is white.
+                        </div>
+
+                        <div class="color-swatch nq-pink-bg">
+                            Text on colored background is white.
+                        </div>
+
+                        <div class="color-swatch nq-light-green-bg">
+                            Text on colored background is white.
+                        </div>
+
+                        <div class="color-swatch nq-brown-bg">
+                            Text on colored background is white.
+                        </div>
                     </div>
 
                     <div class="code">&lt;div class="<b>nq-blue-bg</b>">Nimiq Blue&lt;/div>
@@ -260,7 +284,11 @@
 &lt;div class="<b>nq-gold-bg</b>">Nimiq Gold&lt;/div>
 &lt;div class="<b>nq-green-bg</b>">Nimiq Green&lt;/div>
 &lt;div class="<b>nq-orange-bg</b>">Nimiq Orange&lt;/div>
-&lt;div class="<b>nq-red-bg</b>">Nimiq Red&lt;/div></div>
+&lt;div class="<b>nq-red-bg</b>">Nimiq Red&lt;/div>
+&lt;div class="<b>nq-purple-bg</b>">Nimiq Purple&lt;/div>
+&lt;div class="<b>nq-pink-bg</b>">Nimiq Pink&lt;/div>
+&lt;div class="<b>nq-light-green-bg</b>">Nimiq Light Green&lt;/div>
+&lt;div class="<b>nq-brown-bg</b>">Nimiq Brown&lt;/div></div>
                 </div>
 
                 <div class="nq-card" id="primary-buttons">
