Auto-generate icon sprite with svgstore

--- a/demo.html
+++ b/demo.html
@@ -400,18 +400,18 @@
                         <h1 class="nq-h1"><a href="#icons">Icons</a></h1>
                     </div>
                     <div class="nq-card-body icons">
-                        <svg class="nq-icon"><use xlink:href="./src/icons.sprite.svg#lock-locked"/></svg>
-                        <svg class="nq-icon"><use xlink:href="./src/icons.sprite.svg#lock-unlocked"/></svg>
+                        <svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#lock-locked"/></svg>
+                        <svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#lock-unlocked"/></svg>
                     </div>
 
                     <div class="nq-card-body nq-blue-bg icons">
-                        <svg class="nq-icon"><use xlink:href="./src/icons.sprite.svg#lock-locked"/></svg>
-                        <svg class="nq-icon"><use xlink:href="./src/icons.sprite.svg#lock-unlocked"/></svg>
+                        <svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#lock-locked"/></svg>
+                        <svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#lock-unlocked"/></svg>
                     </div>
 
                     <div class="code">
-&lt;use xlink:href="./src/icons.sprite.svg#<b>lock-locked</b>"/>
-&lt;use xlink:href="./src/icons.sprite.svg#<b>lock-unlocked</b>"/>
+&lt;use xlink:href="./nimiq-style.icons.svg#<b>lock-locked</b>"/>
+&lt;use xlink:href="./nimiq-style.icons.svg#<b>lock-unlocked</b>"/>
                     </div>
                 </div>
             </div><!-- #cards -->
